# transcription-api

./: .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-run.sh  CONTRIBUTING.md  Dockerfile  README.md  compose-common.yml  compose.prod.yml  compose.yml  pyproject.toml  worker.py
src/: callbacks.py  db.py  jobs.py  main.py  queue.py  types.py
tests/: test_main.py
