[project]
name = "transcription-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.2.1",
    "flasgger>=0.9.7.1",
    "flask-cors>=5.0.0",
    "flask>=3.0.3",
    "gunicorn>=23.0.0",
    "instructor>=1.4.2",
    "redis>=5.0.8",
    "rq>=1.16.2",
    "sentry-sdk>=2.14.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-mock>=3.14.0",
    "ruff>=0.6.5",
    "watchdog>=5.0.2",
]

[project.scripts]
test = "pytest"
